--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
   "content_scripts": [
     {
       "matches": ["https://siege.hackclub.com/*"],
-      "js": ["content.js"],
+      "js": ["chart.umd.js", "content.js"],
       "css": ["styles.css"]
     }
   ],
