--- a/manifest_firefox.json
+++ b/manifest_firefox.json
@@ -11,7 +11,7 @@
   "content_scripts": [
     {
       "matches": ["https://siege.hackclub.com/*"],
-      "js": ["content.js"],
+      "js": ["chart.umd.js", "content.js"],
       "css": ["styles.css"]
     }
   ],
