--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,6 +63,7 @@ jobs:
         [ -f icon64.png ] && cp icon64.png temp-chrome-extension/
         [ -f icon128.png ] && cp icon128.png temp-chrome-extension/
         [ -f chart.umd.js ] && cp chart.umd.js temp-chrome-extension/
+        [ -f background.js ] && cp background.js temp-chrome-extension/
 
         # Create Chrome ZIP
         cd temp-chrome-extension
@@ -88,6 +89,7 @@ jobs:
         [ -f icon64.png ] && cp icon64.png temp-firefox-extension/
         [ -f icon128.png ] && cp icon128.png temp-firefox-extension/
         [ -f chart.umd.js ] && cp chart.umd.js temp-firefox-extension/
+        [ -f background.js ] && cp background.js temp-firefox-extension/
 
         # Create Firefox ZIP
         cd temp-firefox-extension
