--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,10 @@
   "host_permissions": [
     "https://siege.hackclub.com/*"
   ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_title": "Siege Utils"
+  },
   "background": {
     "service_worker": "background.js"
   },
@@ -19,6 +23,12 @@
       "matches": ["https://siege.hackclub.com/*"],
       "js": ["chart.umd.js", "content.js"],
       "css": ["styles.css"]
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["catppuccin.css"],
+      "matches": ["https://siege.hackclub.com/*"]
     }
   ],
   "icons": {
