fix like everything, improvements to graph, explore page, catacombs, upgrade route, winter theme, leaderboard and ui

--- a/manifest.json
+++ b/manifest.json
@@ -28,7 +28,7 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["catppuccin.css", "signal.css", "spooky.css"],
+      "resources": ["catppuccin.css", "signal.css", "spooky.css", "winter.css"],
       "matches": ["https://siege.hackclub.com/*"]
     }
   ],
