--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,6 +69,8 @@ jobs:
         [ -f popup.html ] && cp popup.html temp-chrome-extension/
         [ -f catppuccin.css ] && cp catppuccin.css temp-chrome-extension/
         [ -f signal.css ] && cp signal.css temp-chrome-extension/
+        [ -f winter.css ] && cp winter.css temp-chrome-extension/
+        [ -f spooky.css ] && cp spooky.css temp-chrome-extension/
 
         # Create Chrome ZIP
         cd temp-chrome-extension
@@ -100,6 +102,8 @@ jobs:
         [ -f popup.html ] && cp popup.html temp-firefox-extension/
         [ -f catppuccin.css ] && cp catppuccin.css temp-firefox-extension/
         [ -f signal.css ] && cp signal.css temp-firefox-extension/
+        [ -f winter.css ] && cp signal.css temp-firefox-extension/
+        [ -f spooky.css ] && cp spooky.css temp-firefox-extension/
 
         # Create Firefox ZIP
         cd temp-firefox-extension
